--- a/.github/workflows/multiple-job-example.yaml
+++ b/.github/workflows/multiple-job-example.yaml
@@ -1,4 +1,4 @@
-# Note : Each job is runs on it's own virtual machine
+# Note: Each job is runs on it's own virtual machine
 name: Multiple Job Example
 
 on: 
@@ -18,6 +18,7 @@ jobs:
               run: sleep 30
 
     test_job_2:
+        needs: build_job_1
         runs-on: ubuntu-latest
         steps:
             - name: sleep for 10 seconds
@@ -27,6 +28,8 @@ jobs:
               run: grep -i "dragon" dragon.txt
 
     deploy_job_3:
+        # Note: needs also accepts array if it depends on multiple jobs
+        needs: test_job_2
         runs-on: ubuntu-latest
         steps:
             - name: Read File
