added upload & download artifact

--- a/.github/workflows/multiple-job-example.yaml
+++ b/.github/workflows/multiple-job-example.yaml
@@ -1,4 +1,4 @@
-# Note: Each job is runs on it's own virtual machine
+# Note: Each job is runs on it's own virtual machine and by default if we not used needs keyword all jobs are run parallel
 name: Multiple Job Example
 
 on: 
@@ -14,15 +14,23 @@ jobs:
             - name: Execute Cowsay CMD
               run: cowsay -f dragon "Run for cover, I am a DRAGON....REWR" >> dragon.txt
 
-            - name: Sleep for 30 seconds
-              run: sleep 30
+            #  To persists artifacts (if we want to access this artifact in another job use download artifact action in other jobs)
+            - name: Upload Dragon text file
+              uses: actions/upload-artifact@v4
+              with:
+                name: dragon-text-file
+                # A file, directory or wildcard pattern that describes what to upload
+                path: dragon.txt
 
     test_job_2:
         needs: build_job_1
         runs-on: ubuntu-latest
         steps:
-            - name: sleep for 10 seconds
-              run: sleep 10
+            # Download artifact which is uploaded in previous jobs
+            - name: Download Dragon text file
+              uses: actions/download-artifact@v4
+              with:
+                name: dragon-text-file
 
             - name: Test File Exists
               run: grep -i "dragon" dragon.txt
@@ -32,6 +40,11 @@ jobs:
         needs: test_job_2
         runs-on: ubuntu-latest
         steps:
+            - name: Download Dragon text file
+              uses: actions/download-artifact@v4
+              with:
+                name: dragon-text-file
+
             - name: Read File
               run: cat dragon.txt
 
