--- a/.github/workflows/trigger-inputs.yaml
+++ b/.github/workflows/trigger-inputs.yaml
@@ -41,5 +41,5 @@ jobs:
                echo "Message: ${{inputs.message}}"
 
             - name: Run tests (if selected)
-              if: ${{inputs.test-type == true}}
+              if: ${{inputs.run-tests == true}}
               run: echo "Testing..........."
